# mal-2-crunchyroll

./: .env.example  Cargo.toml
src/: main.rs
